@@ -63,7 +63,7 @@ public class DefaultPasswordProvider extends PasswordProvider {
 		PlatformUI.getWorkbench().getDisplay().syncExec(new Runnable() {
 			public void run() {
 				boolean reply = MessageDialog.openConfirm(StorageUtils.getShell(), SecUIMessages.exceptionTitle, SecUIMessages.exceptionDecode);
-				result[0] = new Boolean(reply);
+				result[0] = Boolean.valueOf(reply);
 			}
 		});
 		return result[0].booleanValue();
